--- a/ecommerce/store/templates/store/cart.html
+++ b/ecommerce/store/templates/store/cart.html
@@ -1,6 +1,8 @@
 {% extends 'store/main.html' %}
 {% load static %}
 {% block content %}
+	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+
 	<div class="row">
 		<div class="col-lg-12">
 			<div class="box-element">
@@ -39,9 +41,10 @@
 						<p class="quantity">{{item.quantity}}</p>
 						<div class="quantity">
 							<img data-product="{{item.product.id}}" data-action="add" class="chg-quantity update-cart" src="{% static  'images/arrow-up.png' %}">
-					
 							<img data-product="{{item.product.id}}" data-action="remove" class="chg-quantity update-cart" src="{% static  'images/arrow-down.png' %}">
+
 						</div>
+
 					</div>
 					<div style="flex:1"><p>${{item.get_total|floatformat:2}}</p></div>
 				</div>
